# subradar

./: .gitignore  Classdef.py  LICENSE.md  README.md  __init__.py  iem.py  invert.py  pyproject.toml  roughness.py  setup.py  utils.py
src/subradar/: Classdef.py  __init__.py  fractal.py  iem.py  invert.py  surface.py  utils.py
src/subradar/simulation/: __init__.py  trento.py
subradar/: Classdef.py  __init__.py  filtering.py  fractal.py  iem.py  invert.py  roughness.py  surface.py  utils.py
subradar/simulation/: trento.py
tests/: run_coverage.sh  test_subradar1.py
